--- a/src/scss/test.scss
+++ b/src/scss/test.scss
@@ -4,6 +4,10 @@
 //   outline: 1px solid red;
 // }
 
+// .section__inner {
+//   outline: 2px solid green !important;
+// }
+
 // .page-header {
 //   display: none !important;
 // }
