--- a/src/blocks/main-nav/main-nav.pug
+++ b/src/blocks/main-nav/main-nav.pug
@@ -40,7 +40,7 @@ mixin main-nav-mobile(selectedID)
         +phone(class="text-xl") 8 800 200 57 30
         +hours
       .lang-btns
-        +btn('Ru','lang')(class="mr-[8px]" data-name="ru")
+        +btn('Ru','lang').mr-8px(data-name="ru")
         +btn('Eng','lang')(data-name="en")
 
 
