--- a/src/blocks/reviews/reviews.pug
+++ b/src/blocks/reviews/reviews.pug
@@ -30,7 +30,7 @@ mixin reviews(text, mods)
             button.nav-link#videos-tab(data-bs-toggle="tab" data-bs-target="#videos" type="button" role="tab" aria-controls="Видео" aria-selected="false") Видео
       .tab-content#reviewsTabContent.section__container.container
         // .tab-content__inner()
-        .tab-pane.fade.show.active#profs(role="tabpanel" aria-labelledby="profs-tab" class="-mx-[20px]")
+        .tab-pane.-mx-20px.fade.show.active#profs(role="tabpanel" aria-labelledby="profs-tab")
           .reviews__slider.reviews__slider--profs
             +reviews-user-item(
               {
@@ -38,7 +38,7 @@ mixin reviews(text, mods)
                 name: 'Туманина Вера',
                 info: 'С. Федосеевка'
               })
-              h3.text-xl.lg_text-2xl.lg_mt-0(class="xxl_mb-[20px]") Рикта - мой помощник и спаситель
+              h3.text-xl.lg_text-2xl.lg_mt-0.xxl_mb-20px Рикта - мой помощник и спаситель
               .reviews__item-text.ellipsis(data-lines='10')
                 p.reviews__item-excerpt В 1998 г. я очень сильно болела. Постоянно болела спина, ноги из-за двух межпозвонковых грыж. Я с большим трудом передвигалась, совсем не могла сидеть из-за усиливающихся болей. Я постоянно проходила курсы лечения, но боли продолжались, и мне настойчиво предлагали сделать операцию.
                 p От знакомой узнала, что в соседнем небольшом городке Звенигово Республики Марий Эл работает врач, который кроме стандартного лечения применяет чудо-аппарат. Я решила попробовать полечиться этим аппаратом.
@@ -58,7 +58,7 @@ mixin reviews(text, mods)
                 name: 'Туманина Вера 3',
                 info: 'С. Федосеевка'
               })
-        .tab-pane.fade#users(role="tabpanel" aria-labelledby="users-tab" class="-mx-[20px]")
+        .tab-pane.fade.-mx-20px#users(role="tabpanel" aria-labelledby="users-tab")
           .reviews__slider reviews__slider--users
             +reviews-item(
               {
@@ -81,7 +81,7 @@ mixin reviews(text, mods)
                 info: 'С. Федосеевка'
               })
                 div Users slide 3
-        .tab-pane.fade#videos(role="tabpanel" aria-labelledby="videos-tab" class="-mx-[20px]")
+        .tab-pane.fade.-mx-20px#videos(role="tabpanel" aria-labelledby="videos-tab")
           .reviews__slider.reviews__slider--videos
             +reviews-item(
               {
