--- a/src/scss/_tailwind-colours.scss
+++ b/src/scss/_tailwind-colours.scss
@@ -3,7 +3,8 @@ $tw-inherit: undefined;
 $tw-current: undefined; 
 $tw-transparent: undefined; 
 $tw-black: #14142B; 
-$tw-white: undefined; 
+$tw-slate: #181828; 
+$tw-white: #fff; 
 $tw-neutral: undefined; 
 $tw-red: #ff0000; 
 $tw-orange: undefined; 
