--- a/src/blocks/cart/cart.pug
+++ b/src/blocks/cart/cart.pug
@@ -23,16 +23,16 @@ mixin cart(mods)
       .cart__icon
         i.fa-solid.fa-bag-shopping
       .cart__section(class="text-left")
-        .cart__section-inner(class="ml-[16px] pr-[20px]")
+        .cart__section-inner.ml-16px.pr-20px
           .cart__goods <span>1</span> товар на сумму
           .cart__sum 74600 Р
       .cart__section(class="")
         .cart__section-inner(class="text-left text-xl")
-          button(class="px-[20px]")
+          button.px-20px
             i.fa-regular.fa-heart
       .cart__section(class="after_hidden")
         .cart__section-inner(class="text-left text-xl border-0")
-          button(class="px-[20px]")
+          button.px-20px
             i.fa-solid.fa-arrow-right-arrow-left
 
 
