--- a/src/blocks/field-select/field-select.scss
+++ b/src/blocks/field-select/field-select.scss
@@ -21,7 +21,7 @@
       position: absolute;
       right: 15px;
       top: 50%;
-      font-family: 'Font Awesome 6 Free';
+      @apply font-icon;
       font-weight: 900;
       font-size: 10px;
       color: $tw-black;
