--- a/src/blocks/slider/slider.pug
+++ b/src/blocks/slider/slider.pug
@@ -64,7 +64,7 @@ mixin slider-item--main(props)
           video(width=props.width height=props.height)
             source(src=props.url type=props.type)
           .slider__btn-play
-      .container.lg_flex.lg_flex-col.lg_justify-center.xl_block(class="xl_pl-[100px] xl_pr-[60px] xxl_pl-[180px] xxl_pr-[80px]")
+      .container.lg_flex.lg_flex-col.lg_justify-center.xl_block.xl_pl-100px.xl_pr-60px.xxl_pl-180px.xxl_pr-80px
         block
 
 
