Fixed pages indicator

--- a/src/blocks/cart/cart.scss
+++ b/src/blocks/cart/cart.scss
@@ -70,7 +70,7 @@
     }
   }
 
-  .slider__wrapper--main & {
+  .slider-main__wrapper & {
     position: absolute;
     bottom: 0;
     right: 20px;
