--- a/src/blocks/product-info/product-info.pug
+++ b/src/blocks/product-info/product-info.pug
@@ -35,7 +35,7 @@ mixin product-info-text(props={}, mods)
     }
 
   .product-info__text-wrapper(class=allMods)&attributes(attributes)
-    .product-info__text
+    .product-info__text.slider__item
       h3.product-info__title= props.title
       .product-info__desc= props.desc
       .product-info__price= props.price
@@ -57,7 +57,7 @@ mixin product-info-view(props={}, mods)
       }
     }
 
-  .product-info__view(class=allMods)&attributes(attributes)
+  .product-info__view.slider__item(class=allMods)&attributes(attributes)
     p.text-black= props.test
     .product-info__view-inner
       .product-info-view-content
