--- a/src/blocks/product-list/product-list.pug
+++ b/src/blocks/product-list/product-list.pug
@@ -18,6 +18,6 @@ mixin product-list(text, mods)
       }
     }
 
-  .product-list(class=allMods)&attributes(attributes)
+  .product-list.slider(class=allMods)&attributes(attributes)
     .product-list__inner
       block
