--- a/src/blocks/page-header/page-header.scss
+++ b/src/blocks/page-header/page-header.scss
@@ -7,22 +7,23 @@
   top: 0;
   left: 0;
   right: 0;
+  min-height: 90px;
   z-index: 50;
   background-color: #fff;
+  border-bottom: 1px solid $tw-gray-200;
 
   &__inner {
     display: flex;
     align-items: center;
     padding-top: 10px;
     padding-bottom: 10px;
-    min-height: 60px;
     font-size: 18px;
     line-height: 28px;
     position: relative;
 
     @media (min-width: $screen-xl) {
-      padding-top: 22px;
-      padding-bottom: 20px;
+      padding-top: 17px;
+      padding-bottom: 18px;
     }
 
     @media (max-width: $screen-xl) {
