--- a/src/blocks/reviews/reviews.pug
+++ b/src/blocks/reviews/reviews.pug
@@ -37,7 +37,7 @@ mixin reviews(text, mods)
                 url: '/img/user-reviews-avatar.jpg',
                 name: 'Туманина Вера',
                 info: 'С. Федосеевка'
-              })
+              })(class="slider__item")
               h3.text-xl.lg_text-2xl.lg_mt-0.xxl_mb-20px Рикта - мой помощник и спаситель
               .reviews__item-text.ellipsis(data-lines='10')
                 p.reviews__item-excerpt В 1998 г. я очень сильно болела. Постоянно болела спина, ноги из-за двух межпозвонковых грыж. Я с большим трудом передвигалась, совсем не могла сидеть из-за усиливающихся болей. Я постоянно проходила курсы лечения, но боли продолжались, и мне настойчиво предлагали сделать операцию.
@@ -48,7 +48,7 @@ mixin reviews(text, mods)
                 url: '/img/user-reviews-avatar.jpg',
                 name: 'Туманина Вера 2',
                 info: 'С. Федосеевка'
-              })
+              })(class="slider__item")
               h3.lg_mt-0 Рикта - мой помощник и спаситель
               .reviews__item-text.ellipsis(data-lines='10')
                 p.reviews__item-excerpt В 1998 г. я очень сильно болела. Постоянно болела спина, ноги из-за двух межпозвонковых грыж. Я с большим трудом передвигалась, совсем не могла сидеть из-за усиливающихся болей. Я постоянно проходила курсы лечения, но боли продолжались, и мне настойчиво предлагали сделать операцию.
@@ -57,29 +57,29 @@ mixin reviews(text, mods)
                 url: '/img/user-reviews-avatar.jpg',
                 name: 'Туманина Вера 3',
                 info: 'С. Федосеевка'
-              })
+              })(class="slider__item")
         .tab-pane.fade.-mx-20px#users(role="tabpanel" aria-labelledby="users-tab")
-          .reviews__slider reviews__slider--users
+          .reviews__slider.slider.reviews__slider--users
             +reviews-item(
               {
                 url: '/img/user-reviews-avatar.jpg',
                 name: 'Туманина Вера',
                 info: 'С. Федосеевка'
-              })
+              })(class="slider__item")
                 div Users slide 1
             +reviews-item(
               {
                 url: '/img/user-reviews-avatar.jpg',
                 name: 'Туманина Вера 2',
                 info: 'С. Федосеевка'
-              })
+              })(class="slider__item")
                 div Users slide 2
             +reviews-item(
               {
                 url: '/img/user-reviews-avatar.jpg',
                 name: 'Туманина Вера 3',
                 info: 'С. Федосеевка'
-              })
+              })(class="slider__item")
                 div Users slide 3
         .tab-pane.fade.-mx-20px#videos(role="tabpanel" aria-labelledby="videos-tab")
           .reviews__slider.reviews__slider--videos
@@ -88,21 +88,21 @@ mixin reviews(text, mods)
                 url: '/img/user-reviews-avatar.jpg',
                 name: 'Туманина Вера',
                 info: 'С. Федосеевка'
-              })
+              })(class="slider__item")
                 div Videos slide 1
             +reviews-item(
               {
                 url: '/img/user-reviews-avatar.jpg',
                 name: 'Туманина Вера 2',
                 info: 'С. Федосеевка'
-              })
+              })(class="slider__item")
                 div Videos slide 2
             +reviews-item(
               {
                 url: '/img/user-reviews-avatar.jpg',
                 name: 'Туманина Вера 3',
                 info: 'С. Федосеевка'
-              })
+              })(class="slider__item")
                 div Videos slide 3
 
 
