--- a/src/blocks/slider-main/slider-main.scss
+++ b/src/blocks/slider-main/slider-main.scss
@@ -2,46 +2,47 @@
 // модификаторов, псевдоселекторов, псевдоэлементов, @media-условий...
 // Очередность: http://nicothin.github.io/idiomatic-pre-CSS/#priority
 
-.slider {
+.slider-main {
 
   $block-name: &; // #{$block-name}__element
 
+  height: 100%;
+
   &__wrapper {
     position: relative;
+    padding-bottom: 30px;
+    font-size: 18px;
+    line-height: 28px;
     overflow: hidden;
 
-    &--main {
-      font-size: 18px;
-      line-height: 28px;
-      padding-bottom: 30px;
+    @media (min-width: $screen-lg) {
+      padding-bottom: 100px;
+    }
 
-      @media (min-width: $screen-lg) {
-        padding-bottom: 100px;
+    & .tns-controls {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      z-index: 99;
+
+      @media (min-width: $screen-xl) {
+        top: 70px;
+        right: 65px;
       }
 
-      & .tns-controls {
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        z-index: 99;
-
+      & button {
         @media (min-width: $screen-xl) {
-          top: 70px;
-          right: 65px;
-        }
-
-        & button {
-          @media (min-width: $screen-xl) {
-            width: 55px;
-            height: 50px;
-          }
+          width: 55px;
+          height: 50px;
         }
       }
     }
+
   }
 
   &__inner {
     position: relative;
+    overflow: hidden;
 
     @media (min-width: $screen-lg) {
       height: 580px;
@@ -99,39 +100,46 @@
 
   &__item {
     padding-bottom: 1px;
+    display: none !important;
 
-    &--main {
-      width: 100%;
+    &:first-child {
+      display: inline-block !important;
+    }
+
+    #{$block-name}.tns-slider & {
+      display: inline-block !important;
+    }
+
+    width: 100%;
+    height: 100%;
+
+    & #{$block-name}__item-inner {
       height: 100%;
 
-      & #{$block-name}__item-inner {
-        height: 100%;
-
-        @media (min-width: $screen-lg) {
-          display: flex;
-        }
+      @media (min-width: $screen-lg) {
+        display: flex;
       }
+    }
 
-      & #{$block-name}__media {
-        position: relative;
-        height: 100%;
-        overflow: hidden;
-      }
+    & #{$block-name}__media {
+      position: relative;
+      height: 100%;
+      overflow: hidden;
+    }
 
-      & #{$block-name}__media--video-bg {
-        @media (min-width: $screen-lg) {
-          left: 0;
-          transform: none;
-          order: 10;
-        }
+    & #{$block-name}__media--video-bg {
+      @media (min-width: $screen-lg) {
+        left: 0;
+        transform: none;
+        order: 10;
       }
+    }
 
-      video {
-        max-width: none;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
+    video {
+      max-width: none;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
   }
 
@@ -170,10 +178,6 @@
     @media (min-width: $screen-xl) {
       margin-top: 25px;
     }
-  }
-
-  &--main {
-    // height: 232px !important;
   }
 }
 
