--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -29,9 +29,10 @@ block nav
 
 
 block content
-  main.page__main
-    .main-slider.bg-gray-100
-      +slider({class: "3xl_container"},'main')
+  main.page__main.relative
+    +pages
+    section.bg-gray-100(data-page='main-slider')
+      +slider-main({class: "3xl_container"})
         +slider-item--main({url: '/video/dummy.mov', width: 1920, height: 1080, type: 'video/mp4'})
           .slider__text.xl_mt-150px.xxl_mt-170px
             h2.mt-0 Современная физиотерапия и реабилитация
@@ -50,7 +51,7 @@ block content
             p Разрабатываем с нуля или оптимизируем ваш страховой договор так, чтобы вы получили лучшие условия за меньшие деньги.
             .slider__text-bottom
               +btn('Подробнее','regular')(href="#")
-    section.section-main.section--features.mt-60px
+    section.section-main.section--features.mt-60px(data-page='features')
       .section__container.container
         .section__inner
           +features
@@ -82,7 +83,7 @@ block content
                 "<li>Бесплатный «пробный сеанс» у врача в офисе при производстве</li></ul>",
               icon: 'star'
             })
-    section.section-main.section--info.mt-60px
+    section.section-main.section--info.mt-60px(data-page='info')
       .section__container.container
         .section__inner
           +product-info
@@ -90,12 +91,12 @@ block content
               h2.section__title Новинки
               +btn('Все аппараты','simple')(class="pt-3px")
             .product-info__views-wrapper
-              .product-info__views-list
+              .product-info__views-list.slider
                 +product-info-view({test: 'slide 1'})
                 +product-info-view({test: 'slide 2'})
                 +product-info-view({test: 'slide 3'})
             .product-info__text-wrapper.container.xl_p-0
-              .product-info__text-list
+              .product-info__text-list.slider
                 +product-info-text(
                   {
                     title: '1. РИКТА-ЭСМИЛ (2А)-03',
@@ -150,7 +151,7 @@ block content
                       li.flex.items-center.mb-10px
                         i.cert.shrink-0.mr-15px
                         span Повышенная мощность лазера (45 Вт) в импульсе —более выраженный и быстрый эффект терапии при заболеваниях костно-мышечной системы. Ускоренное восстановление при спортивных перегрузках и разнообразных травмах.
-    section.section-main.section--area.mt-60px
+    section.section-main.section--area.mt-60px(data-page="area")
       .section__container.container
         .section__inner
             .section__header
@@ -162,7 +163,7 @@ block content
                 +areas-item({url: 'img/area-stomatol.jpg',caption: 'Стоматология'})
                 +areas-item({url: 'img/area-sport.jpg',caption: 'Спорт'})
                 +areas-item({url: 'img/area-vet.jpg',caption: 'Косметология'})
-    section.section-main.section--catalog.mt-60px
+    section.section-main.section--catalog.mt-60px(data-page='catalog')
       .section__container.container
         .section__inner
           h2.section__title.xxl_mb-10px Каталог аппаратов
@@ -174,29 +175,29 @@ block content
                 title: 'РИКТА-04/4',
                 desc: 'Без возрастных ограничений. С регулировкой мощности Без возрастных ограничений. С регулировкой мощности',
                 price: '44 800 ₽'
-              })
+              })(class="slider__item")
             +product-card(
               {
                 url: './img/product.jpg',
                 title: 'РИКТА 04/4 (универсальный)',
                 desc: 'Комплектация: "Универсальный" Без возрастных ограничений. С регулировкой мощности',
                 price: '74 600 ₽'
-              })
+              })(class="slider__item")
             +product-card(
               {
                 url: './img/product.jpg',
                 title: 'рикта-эсмил(1)а',
                 desc: 'Портативный. Работает от аккумулятора Без возрастных ограничений. С регулировкой мощности',
                 price: '98 200 ₽'
-              })
+              })(class="slider__item")
             +product-card(
               {
                 url: 'http://placekitten.com/300/300',
                 title: 'рикта-тест',
                 desc: 'Без возрастных ограничений. С регулировкой мощности Без возрастных ограничений. С регулировкой мощности',
                 price: '98 200 ₽'
-              })
-    section.section-main.section--service.mt-60px
+              })(class="slider__item")
+    section.section-main.section--service.mt-60px(data-page='service')
       .section__container.container
         .section__inner
           +service(
@@ -218,7 +219,7 @@ block content
               li.service__item.flex.items-center.mb-20px.xxl_mb-40px
                 i.service-change.shrink-0.mr-15px
                 span Обмен старых аппаратов со скидкой
-    section.section-main.section--reviews.mt-60px
+    section.section-main.section--reviews.mt-60px(data-page='reviews')
       .section__container.container
         .section__inner
           .section__header
@@ -230,13 +231,13 @@ block content
               option(value="#users" role="tab") Пользователи
               option(value="#videos" role="tab") Видеоpa
       +reviews()
-    section.section-main.section--articles.mt-60px
+    section.section-main.section--articles.mt-60px(data-page='articles')
       .section__container.container
         .section__inner
           h2.section__title.xxl_mb-10px Новости и статьи
           +btn('Все статьи','simple').mb-20px
-          .article-preview__list
-            .article-preview.flex.xxl_h-466px.xxl_w-736px
+          .article-preview__list.slider
+            .article-preview.slider__item.flex.xxl_h-466px.xxl_w-736px
               .article-preview__inner.xxl_flex
                 .article-preview__img.shrink-0(class="xxl_w-1/2")
                   img(src="img/article-1.jpg")
@@ -245,7 +246,7 @@ block content
                   .article-preview__title.text-lg.text-black Лазерная терапия в комплексном лечении рожистого воспаления
                   .article-preview__content
                   +btn('Подробнее','simple')(class="text-md mt-10px")
-            .article-preview.xxl_h-466px.xxl_w-402px
+            .article-preview.slider__item.xxl_h-466px.xxl_w-402px
               .article-preview__inner
                 .article-preview__img
                   img(src="img/article-2.jpg")
@@ -254,7 +255,7 @@ block content
                   .article-preview__title.text-lg.text-black Поллиноз, Сенная Лихорадка, Аллергический Ринит?
                   .article-preview__content
                   +btn('Подробнее','simple')(class="text-md mt-10px")
-            //- .article-preview
+            //- .article-preview.slider__item
             //-   .article-preview__img
             //-     img(src="img/article-1.jpg")
             //-   .article-preview__text
@@ -262,7 +263,7 @@ block content
             //-     .article-preview__title.text-lg.text-black Лазерная терапия в комплексном лечении рожистого воспаления
             //-     .article-preview__content
             //-     +btn('Подробнее','simple')(class="text-md mt-10px")
-            //- .article-preview
+            //- .article-preview.slider__item
             //-   .article-preview__img
             //-     img(src="img/article-2.jpg")
             //-   .article-preview__text
